# claude-code

.github/workflows/: pdeforge-ci.yml
colab-local-coding-agent/: Local_AI_Coding_Loop.ipynb  README.md  config.template.toml  helpers.py  requirements.txt
document_scanner/: pyproject.toml  requirements.txt
document_scanner/document_scanner/: __init__.py  main.py
document_scanner/document_scanner/models/: document.py
document_scanner/document_scanner/processing/: dewarper.py  edge_detector.py  enhancer.py  filters.py  perspective.py  pipeline.py
document_scanner/document_scanner/tests/: conftest.py  test_dewarper.py  test_edge_detector.py  test_enhancer.py  test_filters.py  test_perspective.py  test_pipeline.py
document_scanner/document_scanner/ui/: editor_view.py  filter_panel.py  main_window.py  thumbnail_panel.py  toolbar.py
local_redactor/: .gitignore  README.md  build.bat  pyproject.toml  requirements.txt  run.bat
local_redactor/app/: main.py
local_redactor/app/config/: logging_setup.py  paths.py  profiles.py  settings.py
local_redactor/app/core/: audit.py  document_loader.py  ocr_engine.py  output_paths.py  page_classifier.py  pdf_renderer.py  pipeline.py  redaction_engine.py  secure_temp.py  span_mapper.py  text_extractor.py  verification.py
local_redactor/app/detectors/: base.py  fuzzy_detector.py  gliner_detector.py  llm_detector.py  regex_de.py  word_detector.py
local_redactor/app/gui/: main_window.py  preview_widget.py  rule_editor.py  settings_dialog.py  worker.py
local_redactor/packaging/: LocalRedactor.spec  pyi_rth_offline.py
local_redactor/tests/: conftest.py  test_gliner_chunking.py  test_hardening.py  test_no_leak.py  test_ocr_boxes.py  test_ocr_confidence.py  test_original_untouched.py  test_regex_de.py  test_word_detector.py
pdeforge/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pdeforge/benchmarks/: bench_kernels.py
pdeforge/docs/sample_report/: report.md
pdeforge/docs/sample_report_failing/: report.md
pdeforge/examples/: advection_diffusion.py  bug_injection_demo.py  heat_1d.py  heat_2d.py  poisson_2d.py  showcase.py  wave_1d.py
pdeforge/src/pdeforge/: __init__.py  backend.py  cli.py  kernels.py  kernels_numpy.py  mms.py  operators.py  problem.py  report.py  solver.py  study.py  verify.py
pdeforge/tests/: test_backend_parity.py  test_bug_detection.py  test_convergence.py  test_mms.py  test_operators.py  test_validation.py  test_verify.py
video_censor/: pyproject.toml  requirements-dev.txt  requirements.txt
video_censor/tests/: conftest.py  test_cli.py  test_config.py  test_models.py  test_pipeline.py
video_censor/tests/censoring/: test_effects.py
video_censor/tests/detectors/: test_base.py  test_license_plate.py  test_logo.py  test_person.py
video_censor/tests/io/: test_video_reader.py  test_video_writer.py
video_censor/tests/tracking/: test_interactive.py  test_tracker.py
video_censor/video_censor/: cli.py  config.py  models.py  pipeline.py
video_censor/video_censor/censoring/: effects.py
video_censor/video_censor/detectors/: base.py  license_plate.py  logo.py  person.py
video_censor/video_censor/io/: video_reader.py  video_writer.py
video_censor/video_censor/tracking/: interactive.py  tracker.py
